# mytool

./: .gitignore  .pre-commit-config.yaml  DOC_PLAN.md  LICENSE  PROJECT_PLAN.md  README.md  TEST_PLAN.md  agent.py  coverage.xml  fastagent.config.yaml  fastagent.secrets.yaml  pyproject.toml  release_plan.md  ruff.toml
.github/: project_tracker.yaml
.github/workflows/: cd.yml  ci.yml
.hooks/: update_project_tracker.py
docs/: search.js  src.html
docs/src/: main.html  py_bo_p.html  pybop.html  pyboplate.html
docs/src/py_bo_p/: main.html
docs/src/pybop/: main.html
docs/src/pyboplate/: main.html
hooks/: __init__.py  check_docs.py  update_project_tracker.py
src/: __init__.py  main.py
src/agent/: __init__.py  data_store.py  project_manager.py  task_manager.py
src/hooks/: pre_commit.py
src/mcp/: __init__.py  server.py
src/py_bo_p/: main.py
src/py_bop/: main.py
src/pybop/: main.py
src/pyboplate/: main.py
tests/: conftest.py  test_check_docs.py  test_configuration.py  test_main.py  test_project_tracker.py  test_workflows.py
