[project]
name = "pyboplate"
version = "0.1.1"
description = "A modern Python project template using uv for package management"
requires-python = ">=3.8"
dependencies = [
    "jsonschema",
    "pytest-cov>=4.1.0",
    "toml",
    "pyyaml",
]
authors = [
    {name = "remixonwin", email = "remixonwin@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py"]
branch = true

[tool.uv.docs]
dependencies = [
    "pdoc>=14.0.0"
]
commands = [
    "pdoc -o docs/ src/"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyboplate"]
only-include = ["src/pyboplate"]
