[project]
name = "pyboplate"
version = "0.1.1"
description = "Project management tool with DeepSeek integration"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "asyncio",
    "fast-agent-mcp",
    "jsonschema",
    "openai",
    "pytest-cov>=4.1.0",
    "pyyaml",
    "toml",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/mcp", "src/hooks"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
]

[tool.black]
line-length = 99
target-version = ["py310"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]
